crates/shipper-cli/tests/snapshots/cli_snapshots__version_flag.snap
---
source: crates/shipper-cli/tests/cli_snapshots.rs
expression: normalize_output(&stdout)
---
shipper [VERSION]
